--- a/client/style/_profile.scss
+++ b/client/style/_profile.scss
@@ -398,7 +398,7 @@ $columnWidth: 25%;
       background-color:$yellow;
       color:$yellow-high;
       content: "";
-      text-align:right;
+      text-align:left;
       opacity:0;
       pointer-events:none;
     }
