--- a/client/views/profile/profile_grid.html
+++ b/client/views/profile/profile_grid.html
@@ -2,13 +2,20 @@
   <div class="profile-grid"><div class="profile-grid-inner">
 
     {{#each stories}}
-    <a class="profile-grid-stories{{#if img}} img{{/if}} {{randomClasses}}" data-date="{{date}}" data-public="{{public}}" href="/story/{{_id}}">
-      {{#if img}}
+    <a class="profile-grid-stories{{#if img}} img{{/if}} {{randomClasses}}" data-date="{{date}}" data-public="{{public}}" href="/story/{{_id}}" {{#if img}}style="background:{{avgColor}};
+  background-image: none;
+  background-image: none;
+  background-image: none;
+  background-image: none;
+  background-image: none;
+  background-image: none;"{{/if}}>
+      
       <div class="profile-grid-stories-img">
-        <img src="{{imgUrl}}" />
+        <img {{#if img}}src="{{imgUrl}}"{{/if}} />
+        <!-- <img /> -->
       </div>
-      {{/if}}
-      <div class="profile-grid-stories-story">{{text}}</div>
+      
+      <div class="profile-grid-stories-story" {{#if img}}style="color:{{storyColor}}"{{/if}}>{{text}}</div>
       <div class="profile-grid-stories-date">
         <p class="profile-grid-stories-date-month">{{date_month}}</p>
         <p class="profile-grid-stories-date-date">{{date_date}}</p>
