--- a/client/views/profile/profile_menu.html
+++ b/client/views/profile/profile_menu.html
@@ -5,14 +5,14 @@
       {{#if editAccount}}
         <div class="profile-menu-sub profile-menu-edit">
           <div class="profile-menu-edit-picture">
-          <label>Change picture</label>
+          <label>Profile picture</label>
           </div>
           <div class="profile-menu-edit-name">
-            <label>Change your display name</label>
+            <label>Display name</label>
             <input type="text" id="displayName" placeholder="Display name" value="{{displayName}}"/>
           </div>
           <div class="profile-menu-edit-email">
-            <label>Change your email</label>
+            <label>Contact Email</label>
             <input type="email" id="email" placeholder="Your email" value="{{email}}"/>
           </div>
           <div class="profile-menu-edit-password">
