--- a/client/views/journal/story.html
+++ b/client/views/journal/story.html
@@ -11,7 +11,7 @@
         <!-- <img /> -->
       </div>
       
-      <textarea placeholder="What was the best thing that happened to you{{prettyDate}}?" disabled class="story-text" style="padding-top:{{paddingTopStory}}px;{{#if story.img}} color:{{storyColor}};{{/if}}" >{{story.text}}</textarea>
+      <textarea placeholder="What was the best thing that happened to you{{prettyDate}}?"{{#unless edit}} disabled{{/unless}} class="story-text" style="padding-top:{{paddingTopStory}}px;{{#if story.img}} color:{{storyColor}};{{/if}}" >{{story.text}}</textarea>
       <div class="story-date">
         <p class="story-date-month">{{date_month}}</p>
         <p class="story-date-date">{{date_date}}</p>
