--- a/client/views/profile/profile.html
+++ b/client/views/profile/profile.html
@@ -7,7 +7,9 @@
   <div id="profile" class="page">
     {{> profile_header}}
     {{> profile_stats}}
-      {{> profile_grid}}
+      <div class="profile-grid"><div class="profile-grid-inner">
+      </div></div>
+      <a class="profile-grid-more" href="#">Show more&hellip;</a>
 
     <h2 class="profile-outro">
       Go ahead. Have the best day of your life.<br />
