--- a/client/views/profile/profile_grid.html
+++ b/client/views/profile/profile_grid.html
@@ -4,7 +4,7 @@
     {{#each stories}}
     <a class="profile-grid-stories{{#if img}} img{{/if}} {{randomClasses}}" data-date="{{date}}" data-public="{{public}}" href="/story/{{_id}}" {{#if img}}style="background:{{avgColor}};background-image:none;background-image:none;background-image:none;background-image:none;background-image:none;background-image:none;"{{/if}}>
       
-      <div class="profile-grid-stories-img">
+      <div class="profile-grid-stories-img loading">
         <img {{#if img}}src="{{imgUrl}}"{{/if}} />
       </div>
       
