Adding bar to top of visiting stories

--- a/client/views/journal/story.html
+++ b/client/views/journal/story.html
@@ -1,4 +1,9 @@
 <template name="storytime">
+  
+{{#unless isOwner}}
+  {{> profile_top}}
+{{/unless}}
+
 <div id="storytime">
 
 <div class="cover visible no-transition" style="display: block;">
