--- a/client/style/_helpers.scss
+++ b/client/style/_helpers.scss
@@ -8,15 +8,21 @@ $hover: #f1f1f1;
 $text: #666666;
 $sepia: #ff905a;
 
-$green: #25b399;
-  $green-high: #53ecce;
-$blue: #50b7e3;
-$yellow: #ffc157;
-  $yellow-high: #ffea85;
 $borange: #ff905a;
   $borange-high: #ffbf4d;
   $borange-shad: #F46640;
+$yellow: #ffc157;
+  $yellow-high: #ffea85;
+  $yellow-shad: #f9a243;
+$green: #25b399;
+  $green-high: #53ecce;
+  $green-shad: #1ea574;
+$blue: #50b7e3;
+  $blue-high: #63e7ea;
+  $blue-shad: #3697d8;
 $red: #f56d85;
+  $red-high: #ff8fbd;
+  $red-shad: #ed4f4f;
 
 $grey1: #312b2c;
 $grey2: #443f41;
