--- a/client/style/main.css
+++ b/client/style/main.css
@@ -468,118 +468,162 @@ body {
   border-width: 50px 50px;
   border-radius: 50px 50px 50px 50px;
   content: "";
-  opacity: 0; }
+  opacity: 0;
+  pointer-events: none; }
 
 .landing-hero {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-  position: relative;
-  margin: 0;
-  padding: 40px;
-  width: 100%;
-  min-height: 100%;
-  background: #efefef; }
-  .landing-hero h1 {
-    display: block;
-    margin: 0;
-    padding: 40px;
-    color: #cecece;
-    font-weight: 800;
-    font-size: 24px;
-    font-family: "ratio"; }
-  .landing-hero p {
-    -webkit-transition: left 1s;
-    -moz-transition: left 1s;
-    -ms-transition: left 1s;
-    -o-transition: left 1s;
-    transition: left 1s;
-    position: relative;
-    display: block;
-    margin: 0;
-    padding: 40px;
-    color: #666666;
-    font-weight: 300;
-    font-size: 48px;
-    font-family: "ratio"; }
-    .landing-hero p a.cta {
-      /* Positioning */
-      height: 36px;
-      width: 160px;
-      /* Display & Box Model */
-      display: block;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      -ms-box-sizing: border-box;
-      -o-box-sizing: border-box;
-      box-sizing: border-box;
-      padding: 10px 0 0;
-      margin: 20px 0;
-      /* Presentation */
-      background-color: #ffae41;
-      /* Font */
-      color: #ffffff;
-      text-align: center;
-      text-decoration: none;
-      text-transform: uppercase;
-      letter-spacing: .2em;
-      font-weight: 400;
-      font-size: 12px;
-      font-family: "ratio";
-      -webkit-transition: background-color 0.2s;
-      -moz-transition: background-color 0.2s;
-      -ms-transition: background-color 0.2s;
-      -o-transition: background-color 0.2s;
-      transition: background-color 0.2s;
-      -webkit-transition: color 0.2s;
-      -moz-transition: color 0.2s;
-      -ms-transition: color 0.2s;
-      -o-transition: color 0.2s;
-      transition: color 0.2s; }
+  background: #312b2c;
+  color: #ffffff;
+  border-top: 4px solid #25b399; }
 
-.landing-hero-example {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  -ms-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  -o-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  -webkit-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  -moz-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  -ms-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  -o-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  position: relative;
-  margin: 80px auto;
+.landing-hero-top {
+  overflow: hidden; }
+
+.landing-hero-top-logo {
+  display: block;
+  float: left;
+  margin: 40px;
+  padding: 0;
+  width: 30px;
+  height: 40px; }
+  .landing-hero-top-logo a {
+    display: block;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background: url(/img/logo.svg);
+    text-indent: -9999em; }
+
+.landing-hero-top-login {
+  float: right;
+  overflow: hidden;
+  margin: 40px;
+  width: 374px;
+  height: 40px; }
+
+.landing-hero-main {
+  clear: both;
+  padding: 0 40px 80px; }
+  .landing-hero-main p {
+    font-family: "ratio",Arial;
+    font-weight: 100;
+    font-size: 42px; }
+    .landing-hero-main p .landing-hero-main-link {
+      border-color: #ffc157;
+      border-bottom: 2px solid #ffc157;
+      color: #ffffff;
+      text-decoration: none; }
+      .landing-hero-main p .landing-hero-main-link:hover {
+        border-color: #ffea85;
+        color: #ffea85; }
+      .landing-hero-main p .landing-hero-main-link.capture {
+        border-color: #25b399; }
+        .landing-hero-main p .landing-hero-main-link.capture:hover {
+          border-color: #53ecce;
+          color: #53ecce; }
+      .landing-hero-main p .landing-hero-main-link.catalogue {
+        border-color: #f56d85; }
+        .landing-hero-main p .landing-hero-main-link.catalogue:hover {
+          border-color: #ff8fbd;
+          color: #ff8fbd; }
+      .landing-hero-main p .landing-hero-main-link.remember {
+        border-color: #50b7e3; }
+        .landing-hero-main p .landing-hero-main-link.remember:hover {
+          border-color: #63e7ea;
+          color: #63e7ea; }
+
+.landing-hero-main-cta {
+  font-family: "futura-pt",Arial;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 2px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  display: inline-block;
   padding: 20px;
-  max-width: 90%;
-  max-height: 90%;
-  width: 800px;
-  height: 600px;
-  border: 20px solid #ffffff;
-  background: #fcf9f5;
-  color: #cecece;
-  font-weight: 300;
-  font-size: 36px;
-  font-family: "ratio";
-  line-height: 520px;
-  -webkit-transition: -webkit-transform 1s, -moz-transform 1s, -o-transform 1s, -ms-transform 1s, transform 1s;
-  -moz-transition: -webkit-transform 1s, -moz-transform 1s, -o-transform 1s, -ms-transform 1s, transform 1s;
-  -ms-transition: -webkit-transform 1s, -moz-transform 1s, -o-transform 1s, -ms-transform 1s, transform 1s;
-  -o-transition: -webkit-transform 1s, -moz-transform 1s, -o-transform 1s, -ms-transform 1s, transform 1s;
-  transition: -webkit-transform 1s, -moz-transform 1s, -o-transform 1s, -ms-transform 1s, transform 1s; }
-  .landing-hero-example.active {
-    -webkit-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
-    -moz-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
-    -ms-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
-    -o-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
-    transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px); }
+  border: 1px solid #726d6e;
+  color: #726d6e;
+  text-decoration: none;
+  margin-top: 10px; }
+  .landing-hero-main-cta:hover {
+    background: #ffc157;
+    border-color: #ffc157;
+    color: #ffffff; }
+
+.login {
+  display: block; }
+  .login label {
+    display: none; }
+  .login input {
+    font-weight: 200;
+    font-size: 18px;
+    font-family: "ratio",Arial;
+    line-height: 1.2em;
+    display: inline-block;
+    float: left;
+    margin: 0 10px 0 0;
+    padding: 7px 6px;
+    width: 120px;
+    outline: none;
+    border: none;
+    border: 1px solid #443f41;
+    background: #443f41;
+    color: #e5e1e1; }
+    .login input:focus {
+      border-color: #ffc157; }
+  .login button {
+    font-weight: 200;
+    font-size: 18px;
+    font-family: "ratio",Arial;
+    line-height: 1.2em;
+    display: inline-block;
+    float: left;
+    margin: 0px;
+    padding: 9px 8px;
+    width: 80px;
+    outline: none;
+    border: none;
+    background: #ffc157;
+    color: #ffffff;
+    text-align: center; }
+
+.landing-body {
+  position: relative;
+  background: #ffffff;
+  text-align: center;
+  padding: 80px 0; }
+  .landing-body img {
+    max-width: 60%; }
+
+.landing-body-tout {
+  position: absolute;
+  top: 40px;
+  right: 15%;
+  -webkit-border-radius: 70px;
+  -moz-border-radius: 70px;
+  -ms-border-radius: 70px;
+  -o-border-radius: 70px;
+  border-radius: 70px;
+  width: 140px;
+  height: 140px;
+  background: #ff8fbd;
+  color: #ffffff;
+  display: table;
+  overflow: hidden; }
+  .landing-body-tout span {
+    font-family: "futura-pt",Arial;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 16px;
+    letter-spacing: 2px;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: left;
+    padding: 25px; }
 
 /* ==========================================================================
    Journal
