--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,6 +1,6 @@
-<template name="landing">
+<template name="landing-old">
 
-  <div class="landing-hero">
+<!--   <div class="landing-hero">
     <h1>Besterday</h1>
     <p>
       Capture, catalogue, and remember the best part of your day, everyday.<br />
@@ -13,6 +13,6 @@
   <div class="landing-story">
   </div>
   <div class="footer">
-  </div>
+  </div> -->
 
 </template>
