--- a/client/style/_global.scss
+++ b/client/style/_global.scss
@@ -218,6 +218,9 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+strong {
+  font-weight:700;
+}
 
 /* ==========================================================================
    Popover styles
