--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -1,6 +1,7 @@
 @import "helpers";
 @import "global";
 @import "landing";
+@import "footer";
 @import "journal";
 @import "sidebar";
 // @import "dashboard";
