--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -14,6 +14,7 @@
         <p>Besterday helps you <a href="#" class="landing-hero-main-link capture">capture</a>, <a href="#" class="landing-hero-main-link catalogue">catalogue</a>, and <a href="#" class="landing-hero-main-link remember">remember</a> the best part of your day, everyday.</p>
 
         <a href="#" class="landing-hero-main-cta">Sign up</a>
+        {{> mailchimp }}
       </div>
     </div>
 
